--- a/templates/account_templates/admin_panel.html
+++ b/templates/account_templates/admin_panel.html
@@ -6,10 +6,13 @@
     <div class="container">
         <div class="row">
             
-            <h1>You are Signed in as {{request.user}}</h1>
-            <h3>You have {% if request.user.is_staff %} Admin {% else %} User {% endif %} access</h3>
+            <div class="d-flex mt-2">
+            <h1>Welcome {{request.user}}</h1>
+            <h5 class="ms-auto"> {% if request.user.is_staff %} Admin {% else %} User {% endif %}<img src="{% static 'img/admin_perms/account_activation_true.svg'%}" alt=""></h5>
+            </div>
 
-            <hr class="mt-3">
+            <h6>Last Login {{request.user.last_login}}</h6>
+
 
             <div class="card">
                 <ul class="nav d-flex">
