--- a/templates/post_templates/detail.html
+++ b/templates/post_templates/detail.html
@@ -32,7 +32,7 @@
                             
                         </div>
 
-                        <div class="d-flex mt-auto card-header">
+                        <div class="d-flex mt-auto card-header m-1">
                             
                             {% if request.user.is_authenticated %}
 
