Added some elements of the bubble and made the header look nicer

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,14 @@
 <!-- Navbar Start -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="banner">
+
+{% load static %}
+<nav class="navbar navbar-expand-lg" role="banner">
+
+    <div class="bubble_container"></div>
+
     <div class="container">
 
-        <a href="/" class="nav-link navbar-brand text-light">Home</a>
+        <img src="{% static 'img/header/boat_sail_white.png'%}" alt="Home">
+        <a href="/" class="nav-link navbar-brand text-light"> Home</a>
 
         <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks" 
                 aria-controls="navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,3 +61,32 @@
         </div>
     </div>
 </nav>
+
+<!-- I cant seem to make this script into a file because static stops working -->
+
+<script>
+    /*
+    document.querySelectorAll('.bubble_container').forEach(function(container) {
+    const bubble_image = [
+        "{% static '/img/header/bubble.png' %}",
+    ];
+
+    const bubble_count = 8;
+
+    for(let i = 0; i < bubble_count; i++){
+        const bubble = document.createElement("img");
+        bubble.src = bubble_image[Math.floor(Math.random() * bubble_image.length)];
+
+        bubble.className = "bubble";
+
+        bubble.style.left = Math.random() * 100 + "%";
+        bubble.style.top = Math.random() * 3 + "%";
+
+        bubble.style.scale = (Math.random() + 0.2) * 0.5;
+
+        bubble.style.position = "absolute";
+
+        container.appendChild(bubble);
+    }
+});*/
+</script>
