--- a/templates/header_search.html
+++ b/templates/header_search.html
@@ -1,8 +1,15 @@
 <!-- Navbar Start -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="banner">
+ 
+{% load static %}
+<nav class="navbar navbar-expand-lg" role="banner">
     <div class="container">
+
+            <img src="{% static 'img/header/boat_sail_white.png'%}" alt="Home">
+            <a href="/" class="nav-link navbar-brand text-light"> Home</a>
+            
         <div class="d-flex sm-auto me-3">
-            <a href="/" class="nav-link navbar-brand text-light">Home</a>
+
+
 
             <!-- Arama Çubuğu -->
         
