--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,17 @@
     z-index: 0;
 }
 
+.bubble_container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    left:  0px;
+    top: 0px;
+    pointer-events: none;
+    clip-path: rect(5px 100% 100% 5px);
+}
+
 .card{
     margin: 10px;
     padding: 10px;
@@ -89,6 +100,10 @@
     text-align: center;
 }
 
+.navbar{
+    background: linear-gradient(#00000083 70%, #ffffff 80%);
+    padding-bottom: 2rem;
+}
 
 .nav-link{
     padding: 0.6rem;
