Moved user_welcome_title into its own file

--- a/templates/header.html
+++ b/templates/header.html
@@ -64,9 +64,9 @@
 
 <!-- I cant seem to make this script into a file because static stops working -->
 
-<script>
-    /*
-    document.querySelectorAll('.bubble_container').forEach(function(container) {
+<script>/*
+    parent = document.querySelectorAll('.bubble_container')
+    parent.forEach(function(container) {
     const bubble_image = [
         "{% static '/img/header/bubble.png' %}",
     ];
@@ -79,10 +79,19 @@
 
         bubble.className = "bubble";
 
-        bubble.style.left = Math.random() * 100 + "%";
-        bubble.style.top = Math.random() * 3 + "%";
+        const parent_rect = container.getBoundingClientRect();
+        const child_rect = bubble.getBoundingClientRect();
 
-        bubble.style.scale = (Math.random() + 0.2) * 0.5;
+        left_pos = Math.random() * 100;
+        top_pos = Math.random() * 100;
+
+        left_pos = Math.min(left_pos, 100 - (child_rect.width/parent_rect.width)*100);
+        top_pos = Math.min(top_pos, 100 - (child_rect.height/parent_rect.height)*100);
+
+        bubble.style.left = left_pos + "%";
+        bubble.style.top = top_pos + "%";
+
+        bubble.style.scale = (Math.random() + 0.5) * 0.2;
 
         bubble.style.position = "absolute";
 
