--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,7 @@
 
 .bubble_container{
     position: absolute;
+    mix-blend-mode: multiply;
     width: 100%;
     height: 100%;
     border-radius: 5px;
