Added transparent clouds and new kanagawa wallpapers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,10 @@
     clip-path: rect(5px 100% 100% 5px);
 }
 
+.bubble{
+    pointer-events: none;
+}
+
 .card{
     margin: 10px;
     padding: 10px;
