comments out post background cloud affect because its broken and ugly

--- a/templates/post_templates/index.html
+++ b/templates/post_templates/index.html
@@ -145,7 +145,7 @@
     </div>
 
 
-<script>
+<script>/*
     document.querySelectorAll('.cloud_container').forEach(function(container) {
         const cloud_image = [
             "{% static '/img/wallpaper/cloud1.png' %}",
@@ -171,7 +171,7 @@
 
             container.appendChild(cloud);
         }
-    });
+    });*/
 </script>
 
 {% endblock%}
